test/semantic_errors/invalid_assignment13.mc
void main() {
    int a[5];
    int b[5];
    a = b; /* cannot assign array to array */
}